--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -5,12 +5,12 @@ http {
 		listen 127.0.0.1;
 		access_log ~/ngnix.access_log;
 		
-		location /uploads/ {
-			root ;
+		location = /uploads/ {
+			root /home/box/web/uploads/;
 		}
 		
 		location ^~ ^.*\..*${
-			root ;
+			root /home/box/web/public/;
 		}
 		
 		location /{
