--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -5,11 +5,11 @@ http {
 		listen 127.0.0.1;
 		access_log ~/ngnix.access_log;
 		
-		location = /uploads/ {
+		location ^~ /uploads/ {
 			root /home/box/web/uploads/;
 		}
 		
-		location ^~ ^.*\..*${
+		location ^* ^.*\..*${
 			root /home/box/web/public/;
 		}
 		
