--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,6 +1,4 @@
-error_log ~/ngnix.error_log info;
-http {
-	server {
+server {
 		listen 80;
 		access_log ~/ngnix.access_log;
 		
@@ -8,13 +6,11 @@ http {
 			root /home/box/web/uploads/;
 		}
 		
-		location ^* ^.*\..*${
+		location ~* ^.*\..*${
 			root /home/box/web/public/;
 		}
 		
 		location /{
 			return 404;
 		}
-	}
-
 }
