--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,16 +1,15 @@
 server {
 		listen 80;
-		access_log ~/ngnix.access_log;
 		
 		location ^~ /uploads/ {
-			root /home/box/web/uploads/;
+			root /home/box/web/;
 		}
 		
-		location ~* ^.*\..*${
+		location ~* ^.*\..*$ {
 			root /home/box/web/public/;
 		}
 		
-		location /{
+		location / {
 			return 404;
 		}
 }
