--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,7 +9,15 @@ server {
 			root /home/box/web/public/;
 		}
 		
+		location /hello/ {
+			proxy_pass http://0.0.0.0:8080
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header Host $http_host;
+		}
+		
 		location / {
 			return 404;
 		}
+		
+		
 }
