--- a/etc/gunicorn.conf
+++ b/etc/gunicorn.conf
@@ -1,4 +1,4 @@
 CONFIG = {
-	'working_dir': '/home/box/hello.py',
-	'args': (--bind=127.0.0.1:8080)
+	'working_dir': '/home/box/web/',
+	'args': (--bind=0.0.0.0:8080)
 }
